webapp/src/scss/components/_profile.scss
@import "../abstracts/colors";
@import "../abstracts/variables";

.profile-container {
  .section {
    &__header {
      position: relative;
      text-align: center;

      @media (min-width: $md-screen-breakpoint) {
        text-align: right;
        padding-left: 0;
      }
    }

    &__content {
      @media (min-width: $md-screen-breakpoint) {
        display: grid;
        grid-template-rows: minmax(400px, calc(100vh - 145px)) 145px;
      }
    }
  }
}

.avatar {
  display: inline-block;
  width: 240px;
  height: 240px;

  @media (min-width: $md-screen-breakpoint) {
    margin-top: 50vh;
    transform: translateY(-50%);
  }

  &__photo {
    border-radius: 50%;
    width: 100%;
  }
}

.profile {
  text-align: center;

  @media (min-width: $md-screen-breakpoint) {
    text-align: left;
  }
}

.personal-data {
  position: relative;

  @media (min-width: $md-screen-breakpoint) {
    margin-top: 50vh;
    transform: translateY(-50%);
  }

  &__name {
    color: $color-text-main;
    font-size: 67px;
    font-weight: 300;
  }

  &__surname {
    font-size: 67px;
    text-transform: uppercase;
    color: $color-text-second;
    font-weight: 700;
  }

  &__profession {
    font-size: 21px;
    color: $color-text-main;
    font-weight: 300;
  }

  &__links {
    display: flex;
    justify-content: space-between;
    width: 130px;
    margin: 20px auto 20px auto;
    font-size: 25px;
    cursor: pointer;

    @media (min-width: $md-screen-breakpoint) {
      position: absolute;
      bottom: 0;
      right: 0;
    }
  }

  &__link {
    width: 34px;
    height: 34px;
    background-color: $color-dark-light;
    opacity: 0.9;
    border: 3px solid transparent;
    border-radius: 3px;
    text-decoration: none;
    position: relative;

    @media (min-width: $md-screen-breakpoint) {
      float: right;
    }

    &:hover {
      border: 3px solid $color-dark-light;
      background-color: $color-primary;
      opacity: 0.8;

      & .fab {
        color: $color-text-second;
      }
    }
  }

  &__link-icon {
    font-size: 20px;
    color: $color-light-accent;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
  }
}

.contacts {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  border-top: 2px solid $color-dark-accent;

  @media (min-width: $xs-screen-breakpoint) {
    grid-template-columns: 1fr 1fr;
  }

  @media (min-width: $sm-screen-breakpoint) {
    width: 100%;
    margin: 0;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  &__contact {
    color: $color-text-main;
    font-weight: bold;
    text-align: center;
    padding-bottom: 30px;
    margin-top: 15px;
    font-size: 14px;

    @media (min-width: $sm-screen-breakpoint) {
      text-align: left;
    }

    &-name {
      margin-bottom: 12px;
    }

    &-info {
      font-weight: normal;
    }
  }
}

.social-links {
  font-size: 25px;
  cursor: pointer;
  display: grid;
  grid-template-columns: 33px 33px 33px;

  @media (min-width: $md-screen-breakpoint) {
    margin: 20px auto;
  }

  @media (min-width: $sm-screen-breakpoint) {
    margin: 20px auto;
  }

  @media (max-width: $sm-screen-breakpoint) {
    margin: 0 auto;
  }

  &__icon {
    font-size: 20px;
    color: $color-light-accent;
  }

  &__link {
    margin-right: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30px;
    height: 30px;
    background-color: $color-dark-light;
    opacity: 0.9;
    border: 1px solid transparent;
    border-radius: 3px;
    text-decoration: none;
    position: relative;

    &:hover {
      border: 1px solid $color-light-accent;
      background-color: $color-primary;
      opacity: 0.8;

      & .fab {
        color: $color-text-second;
      }
    }
  }
}

